# FinalProJectYear2-1

./: Caddyfile  LICENSE.md  README.md  eslint.config.mjs  middleware.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
Backend-SM/Backend-SmartPersona/: Cargo.toml  libuser_experience.rlib
Backend-SM/Backend-SmartPersona/src/: lib.rs  main.rs
Backend-SM/Backend-SmartPersona/src/config/: config_loader.rs  config_model.rs  stage.rs
Backend-SM/Backend-SmartPersona/src/domain/: mod.rs
Backend-SM/Backend-SmartPersona/src/domain/entities/: admin_data.rs  ads.rs  ai_analysis.rs  company.rs  company_gallery.rs  company_post.rs  job_application.rs  mod.rs  saved_job.rs  social_analysis.rs  social_connection.rs  social_post.rs  user.rs  user_address.rs  user_ai_score.rs  user_education.rs  user_experience.rs  user_job_match.rs  user_job_preference.rs  user_portfolio.rs  user_privacy_settings.rs  user_profile.rs  user_share.rs  user_skill.rs
Backend-SM/Backend-SmartPersona/src/domain/repo/: admin_data.rs  ai_service.rs  company.rs  company_gallery.rs  company_post.rs  job_application.rs  mod.rs  saved_job.rs  social_analysis.rs  social_connection.rs  social_post.rs  user.rs  user_address.rs  user_ai_score.rs  user_education.rs  user_experience.rs  user_job_match.rs  user_job_preference.rs  user_portfolio.rs  user_privacy_settings.rs  user_profile.rs  user_share.rs  user_skill.rs
Backend-SM/Backend-SmartPersona/src/domain/repositories/: job_application.rs
Backend-SM/Backend-SmartPersona/src/infrastructure/: mod.rs
app/: ThemeRegistry.tsx  (+1 more)
(+341 files in other folders)
